db : update time param in story, chapter
